--- a/css/index.css
+++ b/css/index.css
@@ -16,35 +16,35 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
-	display: block;
+  display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
 }
 ol, ul {
-	list-style: none;
+  list-style: none;
 }
 blockquote, q {
-	quotes: none;
+  quotes: none;
 }
 blockquote:before, blockquote:after,
 q:before, q:after {
-	content: '';
-	content: none;
+  content: '';
+  content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 /* Set every element's box-sizing to border-box */
@@ -72,9 +72,9 @@ h1, h2, h3, h4, h5 {
 /* header */
 
 header {
-	display: flex;
-	align-items: baseline;
-	justify-content: space-between;
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
 }
 
 header nav a {
@@ -191,7 +191,7 @@ footer {
 }
 
 .services-header-img {
-	margin-top: 30px;
+  margin-top: 30px;
 }
 
 .page-title h1 {
@@ -267,7 +267,7 @@ strong {
 
 
 .vision-header-img {
-	margin-top: 30px;
+  margin-top: 30px;
 }
 
 span {
@@ -275,8 +275,46 @@ span {
 }
 
 
+/* Tablet Styles */
+@media only screen and (max-width: 800px) {
+
+  header {
+    flex-flow: column wrap;
+  }
+
+  header nav {
+    width: 40%;
+  }
+
+  .services-header-img {
+    width: 40%;
+  }
+
+  .vision-header-img {
+    width: 40%;
+  }
+
+  .page-title {
+    width: 40%;
+  }
+  .service-content {
+    flex-flow: column wrap;
+    width: 75%;
+  }
+
+  .facts {
+    flex-flow: column wrap;
+  }
+
+  .facts img {
+    width: 30%;
+  }
+}
+
+
+
 /* Mobile Styles */
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 500px) {
 
   header {
     flex-flow: column wrap;
