--- a/css/index.css
+++ b/css/index.css
@@ -75,6 +75,14 @@ h1, h2, h3, h4, h5 {
     max-width: 750px;
   }
 }
+
+/* Mobile */
+@media only screen and (max-width: 500px) {
+  .container {
+    max-width: 500px;
+  }
+}
+
 /* header */
 
 header {
@@ -86,7 +94,6 @@ header {
 /* Tablet */
 @media only screen and (max-width: 800px) {
   header {
-    /*width: 95%;*/
     flex-flow: column wrap;
     align-items: center;
   }
@@ -97,9 +104,16 @@ header {
     width: 725px;
     display: flex;
     justify-content: space-between;
-    border: 1px red solid;
     margin-top: 10px;
-    /*text-align: center;*/
+  }
+}
+
+/* Mobile */
+@media only screen and (max-width: 500px) {
+  header nav {
+    display: flex;
+    flex-flow: column wrap;
+    width: 500px;
   }
 }
 
@@ -110,13 +124,6 @@ header nav a {
   text-decoration: none;
 }
 
-/* Tablet */
-@media only screen and (max-width: 800px) {
-  header nav a {
-    /*margin-right: 0;*/
-  }
-}
-
 header nav a:hover {
   text-decoration: underline;
 }
@@ -125,8 +132,24 @@ header nav a:first-child {
   margin-left: 0;
 }
 
+@media only screen and (max-width: 500px ) {
+  header nav a:first-child {
+    border-top: 1px solid black;
+  }
+}
+
 header nav a:last-child {
   margin-right: 0;
+}
+
+@media only screen and (max-width: 500px) {
+  header nav a {
+  font-size: 20px;
+  padding: 20px 0;
+  text-align: center;
+  border-bottom: 1px solid black;
+  width: 100%;
+  }
 }
 
 header .logo {
@@ -138,6 +161,13 @@ header .logo {
     order: -1;
     align-self: center;
     margin-bottom: 30px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  header .logo {
+    margin-top: 20px;
+    margin-bottom: 10px;
   }
 }
 
@@ -168,6 +198,13 @@ header .logo {
   }
 }
 
+@media only screen and (max-width: 500px) {
+  .cta .cta-text {
+    margin-top: 50px;
+    font-size: 72px;
+  }
+}
+
 .cta .cta-text button {
   background: white;
   vertical-align: top;
@@ -181,6 +218,15 @@ header .logo {
 @media only screen and (max-width: 800px) {
   .cta .cta-text button {
     margin-top: 0;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .cta .cta-text button {
+    margin-top: 10px;
+    padding: 6px 41px;
+    font-size: 16px;
+    margin-bottom: 50px;
   }
 }
 
@@ -213,9 +259,23 @@ header .logo {
   margin-top: 25px;
   }
 }
+
+@media only screen and (max-width: 500px) {
+  .main-content {
+  width: 475px;
+  }
+}
 .main-content .top-content {
   padding: 0 10px;
   display: flex;
+}
+@media only screen and (max-width: 500px) {
+  .main-content .top-content {
+  flex-flow: column wrap;
+  width: 450px;
+  margin-top: 20px;
+  margin-left: 10px;
+  }
 }
 
 .main-content .top-content .text-content {
@@ -227,6 +287,12 @@ header .logo {
   margin-right: 0;
 }
 
+@media only screen and (max-width: 500px) {
+  .main-content .top-content .text-content {
+    margin-bottom: 55px;
+  }
+}
+
 .main-content .middle-img {
   margin-top: 45px;
 }
@@ -236,7 +302,15 @@ header .logo {
   width: 758px;
   margin-left: 16px;
   margin-top: 39px;
+  }
 }
+
+@media only screen and (max-width: 500px) {
+  .main-content .middle-img {
+  width: 460px;
+  margin-left: 20px;
+  margin-top: 7px;
+  }
 }
 
 .main-content .bottom-content {
@@ -252,6 +326,15 @@ header .logo {
 
 .main-content .bottom-content .text-content:last-child {
   margin-right: 0;
+}
+
+@media only screen and (max-width: 500px) {
+  .main-content .bottom-content {
+  flex-flow: column wrap;
+  width: 450px;
+  margin-top: 20px;
+  margin-left: 10px;
+  }
 }
 
 .contact {
@@ -277,14 +360,14 @@ footer {
 }
 
 /* Mobile Styles */
-@media only screen and (max-width: 500px) {
+/* @media only screen and (max-width: 500px) {
 
   header {
     flex-flow: column wrap;
-  }
+  } */
 
   /* header nav {
     width: 40%;
   } */
 
-}
+/* } */
