complete index.html mobile responsiveness.

--- a/css/index.css
+++ b/css/index.css
@@ -369,6 +369,11 @@ header .logo {
   margin: 20px 0;
 }
 
+@media only screen and (max-width: 500px) {
+  .contact p {
+    margin-top: 10px;
+  }
+
 footer {
   margin: 32px 0;
   text-align: center;
