--- a/css/index.css
+++ b/css/index.css
@@ -328,6 +328,73 @@ header .logo {
   margin-right: 0;
 }
 
+.page-title h1 {
+  font-size: 30px;
+  margin-top: 30px;
+}
+
+.page-title p {
+  line-height: 1.25;
+}
+
+
+.service-content {
+  margin-top: 40px;
+  border-top: 1px solid black;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  padding-top: 0;
+}
+
+.offering {
+  background: palegoldenrod;
+  border: 1px solid black;
+  margin-top: 30px;
+  width: 48%;
+  padding: 20px;
+  line-height: 1.25;
+}
+
+.offering button {
+  background: white;
+  vertical-align: top;
+  margin-top: 6px;
+  padding: 8px 44px;
+  font-size: 17px;
+  border: 1px solid black;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 25px;
+}
+
+.offering button:hover {
+  background: black;
+  color: white;
+}
+
+.facts {
+  border-top: 2px solid black;
+  margin-top: 40px;
+  display: flex;
+  flex-flow: row nowrap;
+  padding-top: 30px;
+  justify-content: space-between;
+  margin-bottom: 80px;
+}
+
+.facts .facts-content {
+  width: 47%;
+  line-height: 1.25;
+}
+
+.facts ul {
+  list-style-type: square;
+  list-style-position: inside;
+  line-height: 2;
+  margin-top: 15px;
+}
+
 @media only screen and (max-width: 500px) {
   .main-content .bottom-content {
   flex-flow: column wrap;
