--- a/css/index.css
+++ b/css/index.css
@@ -241,51 +241,14 @@ header .logo {
   margin-top: 15px;
 }
 
-@media only screen and (max-width: 500px) {
-  .main-content .bottom-content {
-  flex-flow: column wrap;
-  width: 480px;
-  margin-top: 31px;
-  margin-left: 10px;
-  align-content: space-around;
-  }
-}
-
-@media only screen and (max-width: 500px) {
-  .main-content .bottom-content .text-content {
-  margin-bottom: 72px;
-  width: 450px;
-  }
-}
 .contact {
   margin-top: 57px;
   border-top: 1px solid black;
   padding: 39px 10px 0;
 }
 
-@media only screen and (max-width: 800px) {
-  .contact {
-  margin-top: 78px;
-  }
-}
-
-@media only screen and (max-width: 500px) {
-  .contact {
-  width: 460px;
-  margin-top: -27px;
-  margin-left: 20px;
-  padding: 35px 0 0;
-  }
-}
-
 .contact p {
   margin: 20px 0;
-}
-
-@media only screen and (max-width: 500px) {
-  .contact p {
-    margin-top: 10px;
-  }
 }
 
 footer {
@@ -294,7 +257,171 @@ footer {
   font-size: 14px;
 }
 
+/* Tablet */
+
+@media only screen and (max-width: 800px) {
+
+  .container {
+    max-width: 750px;
+  }
+
+  header nav {
+    width: 725px;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+  }
+
+  header {
+    flex-flow: column wrap;
+    align-items: center;
+  }
+
+  header .logo {
+    order: -1;
+    align-self: center;
+    margin-bottom: 30px;
+  }
+
+  .cta {
+    justify-content: center;
+  }
+  .cta .cta-text {
+    margin-top: 78px;
+  }
+
+  .cta .cta-text button {
+    margin-top: 0;
+  }
+
+  .cta img {
+    display: none;
+  }
+
+  .services-header-img {
+    width: 750px;
+  }
+
+  .main-content {
+    margin-top: 25px;
+    }
+
+  .main-content .middle-img {
+    width: 758px;
+    margin-left: 16px;
+    margin-top: 39px;
+    }
+  
+  .contact {
+  margin-top: 78px;
+  }
+}
+
+/* Mobile */
+
 @media only screen and (max-width: 500px) {
+
+  .container {
+    max-width: 500px;
+  }
+
+  header nav {
+    display: flex;
+    flex-flow: column wrap;
+    width: 500px;
+  }
+
+  header nav a:first-child {
+    border-top: 1px solid black;
+  }
+
+  header nav a {
+    font-size: 20px;
+    padding: 20px 0;
+    text-align: center;
+    border-bottom: 1px solid black;
+    width: 100%;
+    }
+
+  header .logo {
+    margin-top: 20px;
+    margin-bottom: 10px;
+  }
+
+  .cta .cta-text {
+    margin-top: 50px;
+    font-size: 72px;
+  }
+
+  .cta .cta-text button {
+    margin-top: 10px;
+    padding: 6px 41px;
+    font-size: 16px;
+    margin-bottom: 50px;
+  }
+
+  .services-header-img {
+    width: 500px;
+  }
+
+  .services-info-img {
+    width: 250px;
+    height: 250px;
+    
+  }
+
+  .main-content {
+    width: 475px;
+    }
+
+  .main-content .top-content {
+    flex-flow: column wrap;
+    width: 450px;
+    margin-top: 20px;
+    margin-left: 10px;
+    }
+
+  .main-content .top-content .text-content {
+    margin-bottom: 55px;
+  }
+
+  .main-content .middle-img {
+    width: 460px;
+    margin-left: 20px;
+    margin-top: 7px;
+    }
+
+  .service-content {
+    flex-flow: column wrap;
+    width: 475px;
+    margin-top: 20px;
+    margin-left: 10px;
+    }
+
+  .main-content .bottom-content {
+    flex-flow: column wrap;
+    width: 480px;
+    margin-top: 31px;
+    margin-left: 10px;
+    align-content: space-around;
+    }
+
+  .main-content .bottom-content .text-content {
+    margin-bottom: 72px;
+    width: 450px;
+    }
+
+  .contact {
+    width: 460px;
+    margin-top: -27px;
+    margin-left: 20px;
+    padding: 35px 0 0;
+    }
+
+  .contact p {
+    margin-top: 10px;
+  }
+
   footer {
     font-size: 16px;
     margin-top: 26px;
